--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "watchify src/app.js -t babelify -o bundle.js"
+    "watch": "watchify src/js/app.js -t babelify -o dist/bundle.js",
+    "sass": "node-sass src/scss/app.scss --watch -o dist/"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babelify": "^6.3.0",
-    "browserify": "^11.2.0"
+    "browserify": "^11.2.0",
+    "node-sass": "^3.3.3"
   },
   "dependencies": {
     "react": "^0.14.0",
