--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "node-sass": "^3.3.3"
   },
   "dependencies": {
+    "flux": "^2.1.1",
+    "keymirror": "^0.1.1",
     "react": "^0.14.0",
+    "react-addons-linked-state-mixin": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-draggable": "tohashi/react-draggable"
   }
