--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "flux": "^2.1.1",
     "keymirror": "^0.1.1",
+    "lodash": "^3.10.1",
     "react": "^0.14.0",
     "react-addons-linked-state-mixin": "^0.14.0",
     "react-dom": "^0.14.0",
