--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "keymirror": "^0.1.1",
     "lodash": "^3.10.1",
     "react": "^0.14.0",
-    "react-addons-linked-state-mixin": "^0.14.0",
     "react-dom": "^0.14.0",
-    "react-draggable": "github:tohashi/react-draggable"
+    "react-draggable": "github:tohashi/react-draggable#pos"
   },
   "repository": {
     "type": "git",
