--- a/package.json
+++ b/package.json
@@ -3,21 +3,26 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "watch": "watchify src/js/app.js -t babelify -o dist/bundle.js",
+    "build": "browserify src/js/app.js -o dist/bundle.js -t [ babelify --presets [ es2015 react ] ] && node-sass src/scss/app.scss -o dist/",
+    "watch": "watchify src/js/app.js -o dist/bundle.js -t [ babelify --presets [ es2015 react ] ]",
     "sass": "node-sass src/scss/app.scss --watch -o dist/"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "babelify": "^6.3.0",
-    "browserify": "^11.2.0",
-    "node-sass": "^3.3.3"
+    "babel-preset-es2015": "^6.1.2",
+    "babel-preset-react": "^6.1.2",
+    "babelify": "^7.2.0",
+    "browserify": "^12.0.1",
+    "node-sass": "^3.3.3",
+    "watchify": "^3.6.0"
   },
   "dependencies": {
     "flux": "^2.1.1",
     "keymirror": "^0.1.1",
     "lodash": "^3.10.1",
     "react": "^0.14.0",
+    "react-addons-linked-state-mixin": "^0.14.2",
     "react-dom": "^0.14.0",
     "react-draggable": "^1.0.1"
   },
