--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-draggable": "github:tohashi/react-draggable",
-    "react-resizable": "^0.4.3"
+    "react-resizable": "github:tohashi/react-resizable"
   },
   "repository": {
     "type": "git",
