--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "browserify src/js/app.js -o dist/bundle.js -t [ babelify --presets [ es2015 react ] ] && node-sass src/scss/app.scss -o dist/",
-    "watch": "watchify src/js/app.js -o dist/bundle.js -t [ babelify --presets [ es2015 react ] ]",
-    "sass": "node-sass src/scss/app.scss --watch -o dist/"
+    "build": "gulp build",
+    "watch": "gulp"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "babel": "^6.3.13",
+    "babel-core": "^6.3.13",
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.1.2",
     "babelify": "^7.2.0",
+    "browser-sync": "^2.10.0",
     "browserify": "^12.0.1",
-    "node-sass": "^3.3.3",
+    "gulp": "^3.9.0",
+    "gulp-sass": "^2.1.0",
+    "gulp-webserver": "^0.9.1",
     "watchify": "^3.6.0"
   },
   "dependencies": {
@@ -23,7 +27,9 @@
     "lodash": "^3.10.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
-    "react-draggable": "github:tohashi/react-draggable"
+    "react-draggable": "github:tohashi/react-draggable",
+    "react-redux": "^4.0.0",
+    "redux": "^3.0.4"
   },
   "repository": {
     "type": "git",
