--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-draggable": "github:tohashi/react-draggable",
+    "react-dropzone": "^3.3.0",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4"
   },
