--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel": "^6.3.13",
-    "babel-core": "^6.3.13",
+    "babel-core": "^6.3.21",
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.1.2",
     "babelify": "^7.2.0",
@@ -30,6 +30,7 @@
     "react-draggable": "github:tohashi/react-draggable",
     "react-dropzone": "^3.3.0",
     "react-redux": "^4.0.0",
+    "react-tabs": "^0.5.1",
     "redux": "^3.0.4"
   },
   "repository": {
