--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^0.14.0",
     "react-draggable": "github:tohashi/react-draggable",
     "react-dropzone": "^3.3.0",
+    "react-modal": "^0.6.1",
     "react-redux": "^4.0.0",
     "react-tabs": "^0.5.1",
     "redux": "^3.0.4"
